<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.erikperez.pictureviewer.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpleFragStr"
            android:id="@+id/simpleFragBtn"
            android:layout_gravity="center_horizontal"
            android:onClick="simple" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiFragStr"
            android:id="@+id/multiFragBtn"
            android:layout_gravity="center_horizontal"
            android:onClick="multiple" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewPagerFragStr"
            android:layout_gravity="center_horizontal"
            android:id="@+id/viewPagerFragBtn"
            android:onClick="viewPager" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycleViewStr"
            android:id="@+id/recycleViewBtn"
            android:layout_gravity="center_horizontal"
            android:onClick="recyclerView" />
    </LinearLayout>
</RelativeLayout>
