<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.erikperez.pictureviewer.multiple.fragment.MultipleMenuFragment">

    <!-- TODO: Update blank fragment layout -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:columnCount="3"
        android:rowCount="1"
        android:layout_gravity="center_horizontal|top" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_one_dog"
            android:id="@+id/multiMenuBtn1"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_two_dogs"
            android:id="@+id/multiMenuBtn2"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_three_dogs"
            android:id="@+id/multiMenuBtn3"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="fill_horizontal"
            android:layout_columnWeight="1" />
    </GridLayout>
</FrameLayout>
